--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "helmet": "^5.0.1",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
   }
