--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.2",
     "helmet": "^5.0.1",
     "joi": "^17.5.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15"
   }
